# ispdb

./: .gitignore  Makefile  README.md  pyproject.toml
src/ispdb/: args.py  configure.py  lookups.py  main.py
tests/: __init__.py
tests/ispdb/: test_args.py  test_lookups.py  test_main.py
